k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  type: LoadBalancer
  selector:
    app: user
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
